syntax = "proto3";
package lbm.composable.v1alpha1;

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/line/lbm-sdk/x/composable";

// Params defines the parameters for the module.
message Params {
  uint32 max_descendants = 1;
}

// Trait defines a trait associated with a classification of nft.
message Trait {
  // indentifier of the trait
  string id = 1;

  // flag to tell whether a property value of the trait can be mutated or not
  bool mutable = 2;
}

// Class defines a classification of nft.
message Class {
  // identifier of the classfication
  string id = 1;
}

// Property defines a property associated with an nft.
message Property {
  // identifier of the property
  string id = 1;

  // fact associated with the property
  string fact = 2;
}

// NFT defines a non-fungible token.
message NFT {
  option (gogoproto.stringer)         = false;
  option (gogoproto.goproto_stringer) = false;

  // identifier of the class for the nft
  string class_id = 1;

  // identifier of the nft
  string id = 2 [(gogoproto.customtype) = "github.com/line/lbm-sdk/types.Uint", (gogoproto.nullable) = false];
}
